Also add package-info to empty package